share data between two loops. (Eric)

Refactored sorting/merging algorithm for ComparableEvents so that
merging can be done in place.  This makes it possible to merge without
copying duplicate events into sublists and so improves the indexer's
ability to work on large data sets with a reasonable amount of memory.
There is still more to be done in this department, however. (Eric)

1.2.4
-----
Added options for doing *very* simple smoothing, in which we 'observe'
features that we didn't actually see in the training data.  Seems to
improve performance for models with small data sets and only a few
outcomes, though it conversely appears to degrade those with lots of
data and lots of outcomes.

Added BasicEventStream and BasicContextGenerator classes which assume
that the contextual predicates and outcomes are just sitting pretty in
lines.  This allows the events to be stored in a file and then read in
for training without scanning around producing the events everytime.

Added sample application "sports" to help with testing model behavior
and to act as an example to help newbies use the toolkit and build
their own maxent applications.

Fixed bug in TrainEval in which the number of iterations and the
cutoff were swapped in the call to train the model.

PerlHelp and BasicEnglishAffixes classes were moved out of Maxent so
that gnu-regexp.jar is no longer needed.


1.2.2
-----
Added "exe" to build.xml to create stand alone jar files. Also added
structure and "homepage" target so that it is easier to keep homepage
up-to-date.

Added IntegerPool, which manages a pool of shareable, read-only Integer 
objects in a fixed range. This is used in several places where Integer 
objects were previously created and then GCed.

In various places, used Collections API features to speed things up. 
For example, java.util.List.toArray() will do a System.arraycopy, if 
given a big enough array to copy into. This is, therefore, much
faster.
