@@ -1,1 +1,1 @@
-build
+output
