@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.13 2002/01/02 11:20:00 jasonbaldridge Exp $ -->
+<!-- $Id: build.xml,v 1.14 2002/01/02 11:31:30 jasonbaldridge Exp $ -->
 
 <project default="package" basedir=".">
 
@@ -23,9 +23,8 @@
     <property name="lib.dir" value="./lib"/>
     <property name="packages" value="opennlp.maxent.*"/>
 
-    <property name="build.dir" value="./build"/>
-    <property name="build.src" value="./build/src"/>
-    <property name="build.dest" value="./build/classes"/>
+    <property name="build.dir" value="./output"/>
+    <property name="build.dest" value="${build.dir}/classes"/>
     <property name="build.javadocs" value="./docs/api"/>
 
     <property name="dist.root" value="./dist"/>
@@ -80,14 +79,7 @@
   <!-- =================================================================== -->
    <target name="prepare-src" depends="prepare">
     <!-- create directories -->
-    <mkdir dir="${build.src}"/>
     <mkdir dir="${build.dest}"/>
-
-    <!-- copy src files -->
-    <copy todir="${build.src}" >
-      <fileset dir="${src.dir}"/>
-    </copy>
-
   </target>
 
 
@@ -95,7 +87,7 @@
   <!-- Compiles the source directory                                       -->
   <!-- =================================================================== -->
   <target name="compile" depends="prepare-src">
-    <javac srcdir="${build.src}"
+    <javac srcdir="${src.dir}"
            destdir="${build.dest}"
            debug="${debug}"
            classpathref="build.classpath"
@@ -169,7 +161,7 @@
   <target name="javadoc" depends="prepare-src">
     <mkdir dir="${build.javadocs}"/>
     <javadoc packagenames="${packages}"
-             sourcepath="${build.src}"
+             sourcepath="${src.dir}"
              destdir="${build.javadocs}"
              author="true"
              version="true"
