@@ -13,6 +13,8 @@ copying duplicate events into sublists and so improves the indexer's
 ability to work on large data sets with a reasonable amount of memory.
 There is still more to be done in this department, however. (Eric)
 
+The output directory is now "output" instead of "build". (Jason)
+
 1.2.4
 -----
 Added options for doing *very* simple smoothing, in which we 'observe'
